// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<PIL /> renders correctly for default task with procedures and species 1`] = `
<div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.procedures
      </span>
    </h2>
    <div
      data-testid="procedures-diff"
    >
      Mocked ProceduresDiff
    </div>
  </div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.species
      </span>
    </h2>
    <div
      data-testid="species-diff"
    >
      Mocked SpeciesDiff
    </div>
  </div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.training
      </span>
    </h2>
    <div
      data-testid="training-summary"
    >
      Mocked TrainingSummary
    </div>
  </div>
</div>
`;

exports[`<PIL /> renders correctly for transfer task 1`] = `
<div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.transfer
      </span>
    </h2>
    <table
      class="govuk-table compare"
    >
      <thead>
        <tr>
          <th>
            <span
              data-testid="snippet"
            >
              pil.establishment.current
            </span>
          </th>
          <th>
            <span
              data-testid="snippet"
            >
              pil.establishment.proposed
            </span>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <a
              href="establishment.dashboard"
            >
              Current Establishment
            </a>
          </td>
          <td>
            <span
              class="highlight"
            >
              <a
                href="establishment.dashboard"
              >
                New Establishment
              </a>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.procedures
      </span>
    </h2>
    <div
      data-testid="procedures-diff"
    >
      Mocked ProceduresDiff
    </div>
  </div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.species
      </span>
    </h2>
    <div
      data-testid="species-diff"
    >
      Mocked SpeciesDiff
    </div>
  </div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.training
      </span>
    </h2>
    <div
      data-testid="training-summary"
    >
      Mocked TrainingSummary
    </div>
  </div>
</div>
`;

exports[`<PIL /> renders correctly for update-conditions action 1`] = `
<div>
  <div
    data-testid="sticky-nav-anchor"
  >
    <h2>
      <span
        data-testid="snippet"
      >
        sticky-nav.conditions
      </span>
    </h2>
    <div
      data-testid="diff-text"
    >
      <span
        data-testid="snippet"
      >
        diff.previous
      </span>
       
      old-conditions
       
      new-conditions
       
      <span
        data-testid="snippet"
      >
        diff.changed-to
      </span>
    </div>
  </div>
</div>
`;
